--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Andres Pastrana",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "",
+    "test": "jest --testTimeout=5000 --coverage --watchAll --detectOpenHandles",
     "start": "node index"
   },
   "license": "MIT",
@@ -20,7 +20,16 @@
     "mongoose": "^7.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
